# new_ModSar

./: .gitattributes  .gitignore  README.md  build_all.sh  test_git.md
buildCentral/: build_central.cfg  mk
buildCentral/tools/buildCentral/: Readme  bc_core.py  build_central.py
buildCentral/tools/buildCentral/install/: RH850.cmake
buildCentral/tools/make_image/: Readme
docs/: using_buildCentral.md  using_gtest.md
examples/helloworld/: CMakeLists.txt
examples/helloworld/inc/: sum.h
examples/helloworld/src/: main.cpp  sum.cpp
examples/helloworld/tests/: test_sum.cpp
projects/modsar/: CodeRule.md
projects/modsar/arch/: ModSar.qea
projects/modsar/arch/concepts/: COM_Keys.drawio  EM_SM.drawio  IDL_Arch.drawio
projects/modsar/arch/umls/: collect.wsd  components.wsd  core.wsd  method.swd  method_act.wsd
projects/modsar/codelabs/core/: future_test.cpp  testErrorCode.cpp  testOptional.cpp  testPromise.cpp  testResult.cpp  testStringView.cpp  testVariant.cpp  testutility.cpp
projects/modsar/codelabs/studies/: test_constructible.cpp  test_enableif.cpp
projects/modsar/gtests/: Readme.md
projects/modsar/gtests/ara/core/: Readme.md
projects/modsar/include/ara/com/: sample_ptr.h  types.h
projects/modsar/include/ara/com/event/: event_proxy.hpp  event_skeleton.hpp
projects/modsar/include/ara/com/proxy/: method_proxy.hpp  method_proxy_impl.hpp  proxy.hpp
projects/modsar/include/ara/com/rpc/: rpc_call.hpp  rpc_service_method.hpp
projects/modsar/include/ara/com/sd/: runtime.h
projects/modsar/include/ara/com/skeleton/: method.hpp  method_skeleton.hpp  method_skeleton_impl.hpp  skeleton.hpp
projects/modsar/include/ara/core/: array.h  core_error_domain.h  error_code.h  error_domain.h  exception.h  future.h  future_error_domain.h  map.h  optional.h  optional_error.h  promise.h  result.h  set.h  string.h  string_view.h  utility.h  variant.h  vector.h
projects/modsar/sources/: Readme.md
projects/modsar/sources/ara/com/rpc/: rpc_call.cpp  rpc_service_method.cpp
